--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li id="show-home" class="active"><a id="link-home" href="?view=home">Home</a></li>
         <li id="show-artik053"><a id="link-artik053" href="?view=artik053">ARTIK 053</a></li>
         <li id="show-rpi2"><a id="link-rpi2" href="?view=rpi2">Raspberry Pi 2</a></li>
-        <li id="show-stm32"><a id="link-stm32" href="?view=stm32">STM32F4-Discovery</a></li>
+        <li id="show-stm32"><a id="link-stm32" href="?view=stm32f4dis">STM32F4-Discovery</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
