Support and render the results which measured on an Artik530 device.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <ul class="nav navbar-nav">
         <li id="show-home" class="active"><a id="link-home" href="?view=home">Home</a></li>
         <li id="show-artik053"><a id="link-artik053" href="?view=artik053">ARTIK 053</a></li>
+        <li id="show-artik530"><a id="link-artik530" href="?view=artik530">ARTIK 530</a></li>
         <li id="show-rpi2"><a id="link-rpi2" href="?view=rpi2">Raspberry Pi 2</a></li>
         <li id="show-stm32f4dis"><a id="link-stm32" href="?view=stm32f4dis">STM32F4-Discovery</a></li>
       </ul>
